--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "backend",
+  "name": "books-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Books API using PostgreSQL with Sequelize",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "migrate": "sequelize-cli db:migrate",
+    "seed": "sequelize-cli db:seed:all",
+    "undo-migrate": "sequelize-cli db:migrate:undo:all",
+    "undo-seed": "sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/pg": "^7.14.9",
+    "@types/sequelize": "^4.28.8",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "express": "^4.17.1",
+    "mysql2": "^3.5.2",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5",
+    "sequelize-typescript": "^2.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "@types/node": "^16.7.13",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   }
 }
